<resources>
    <string name="app_name"></string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_recordatorios">Recordatorios</string>
    <string name="menu_medicamentos">Medicamentos</string>
    <string name="menu_consultas">Consultas</string>
    <string name="menu_twitter">Twitter</string>
    <string name="menu_cerrar_sesion">Cerrar sesión</string>

    <string name="home_second">Home Second</string>
</resources>
