<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/grpInicio">
        <item
            android:id="@+id/nav_recordatorios"
            android:icon="@drawable/ic_access_alarms"
            android:title="@string/menu_recordatorios" />
    </group>

    <group android:id="@+id/grpSecciones">
        <item
            android:id="@+id/nav_medicamentos"
            android:icon="@drawable/medicina"
            android:title="@string/menu_medicamentos" />
        <item
            android:id="@+id/nav_consultas"
            android:icon="@drawable/consulta"
            android:title="@string/menu_consultas" />
    </group>

    <group android:id="@+id/grpSocial">
        <item
            android:id="@+id/nav_twitter"
            android:icon="@drawable/twitter"
            android:title="@string/menu_twitter" />
    </group>

    <group android:id="@+id/grpSalir">
        <item
            android:id="@+id/nav_cerrar_sesion"
            android:icon="@drawable/ic_close"
            android:title="@string/menu_cerrar_sesion" />
    </group>

</menu>
